--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,35 +1,52 @@
 name: Daily Stock AI Report
 
+# 触发规则：北京时间12:00（UTC+4）、15:15（UTC+7:15），周一到周五；保留手动触发
 on:
   schedule:
-    - cron: '0 4 * * 1-5'  # 北京时间12:00（UTC+8），周一到周五
-  workflow_dispatch:  # 手动触发
+    - cron: '0 4 * * 1-5'    # 北京时间 12:00（UTC+8 → UTC 4:00），午盘分析
+    - cron: '15 7 * * 1-5'   # 北京时间 15:15（UTC+8 → UTC 7:15），收盘分析
+  workflow_dispatch:          # 手动触发（紧急分析/测试）
+
+# 并发控制：避免重复运行导致资源冲突
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    # 设置超时时间（适配AI 120秒超时需求）
+    timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Python
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # 仅拉取最新代码，加速流程
+
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      
-      # 新增：安装系统级依赖（解决pycairo需要的cairo库）
+          cache: 'pip'    # 缓存pip依赖，加速安装
+
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libcairo2-dev pkg-config  # 关键：安装cairo和pkg-config
-      
-      - name: Install dependencies
+          sudo apt-get update -y
+          sudo apt-get install -y --no-install-recommends \
+            libcairo2-dev pkg-config \
+            libfreetype6-dev libpng-dev libjpeg-dev  # 补充绘图依赖（Mplfinance）
+          sudo apt-get clean  # 清理缓存，减少空间占用
+
+      - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-      
-      - name: Run main script
+          # 验证依赖安装（可选，便于调试）
+          pip list | grep -E "gemini|openai|akshare|mplfinance|python-telegram-bot"
+
+      - name: Run main script (Wyckoff AI Analysis)
         env:
-          # 原有环境变量（保留）
+          # 原有环境变量
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -37,13 +54,23 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           WYCKOFF_PROMPT_TEMPLATE: ${{ secrets.WYCKOFF_PROMPT_TEMPLATE }}
-          # 新增：DeepSeek密钥
+          # 新增 DeepSeek 密钥
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+          # 补充项目核心环境变量（适配AI超时/安全策略）
+          AI_REQUEST_TIMEOUT: 120
+          GEMINI_SAFETY_POLICY: BLOCK_NONE
         run: |
-          python main.py
-      
-      - name: Upload reports
+          # 创建报告目录（防止脚本执行时目录不存在）
+          mkdir -p reports
+          # 执行主脚本并输出日志（便于调试）
+          python main.py 2>&1 | tee reports/execution.log
+
+      - name: Upload reports and logs
         uses: actions/upload-artifact@v4
+        if: always()  # 即使脚本执行失败，也上传报告/日志用于排查
         with:
           name: stock-reports
-          path: reports/
+          path: |
+            reports/
+            *.log  # 包含执行日志
+          retention-days: 7  # artifact 保留7天，节省存储空间
